WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221908
[LFC][Integration] Fix fast/text/justify-nbsp.html tests with inlines enabled
https://bugs.webkit.org/show_bug.cgi?id=221908
Summary
[LFC][Integration] Fix fast/text/justify-nbsp.html tests with inlines enabled
alan
Reported
2021-02-15 10:18:17 PST
let's disable it for now.
Attachments
Patch
(3.68 KB, patch)
2021-02-15 10:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-02-15 10:37:09 PST
Created
attachment 420332
[details]
Patch
EWS
Comment 2
2021-02-15 13:43:06 PST
Committed
r272877
: <
https://commits.webkit.org/r272877
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420332
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-15 13:44:18 PST
<
rdar://problem/74363787
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug