[LFC][Integration] Fix fast/text/justify-nbsp.html tests with inlines enabled https://bugs.webkit.org/show_bug.cgi?id=221908

Reviewed by Antti Koivisto.

Non-breaking-space is not taken into account when counting the number of expansion opportunities. Disable IFC for now.

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::printReason):
(WebCore::LayoutIntegration::canUseForCharacter):
* layout/integration/LayoutIntegrationCoverage.h:


Canonical link: https://commits.webkit.org/234110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272877 268f45cc-cd09-0410-ab3c-d52691b4dbfc